--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   location_web: ^1.0.0
   google_maps: ^3.4.1
   google_maps_flutter_web: ^0.1.0+3
+  firebase_auth: ^0.18.1+2
 
 
   # The following adds the Cupertino Icons font to your application.
